# avaliacao_4

./: README.md  pyproject.toml
config/: settings.py  urls.py
tarefas_app/: admin.py  models.py  urls.py  views.py
tarefas_app/migrations/: 0001_initial.py  0002_alter_tarefa_options_tarefa_prazo_and_more.py
templates/: base.html
templates/tarefas_app/: lista_tarefas.html
